--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.list.MultipleListActivity"></activity>
+        <activity android:name=".ui.list.MyListActivity"></activity>
+        <activity android:name=".ui.list.MultipleListActivity" />
         <activity android:name=".ui.list.DataListActivity" />
         <activity android:name=".ui.main.MainActivity2" />
         <activity android:name=".MainActivity">
