--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.bottomsheet.BottomsheetActivity"></activity>
+        <activity android:name=".ui.behavior.BehaviorActivity"></activity>
+        <activity android:name=".ui.behavior.BehaviorActivity2"></activity>
+        <activity android:name=".ui.bottomsheet.BottomsheetActivity" />
         <activity android:name=".ui.list.SecondShareActivity" />
         <activity android:name=".ui.list.MyListActivity" />
         <activity android:name=".ui.list.MultipleListActivity" />
