--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dawnmvvm">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.behavior.BehaviorActivity"></activity>
-        <activity android:name=".ui.behavior.BehaviorActivity2"></activity>
+        <activity android:name=".ui.behavior.BehaviorActivity" />
+        <activity android:name=".ui.behavior.BehaviorActivity2" />
         <activity android:name=".ui.bottomsheet.BottomsheetActivity" />
         <activity android:name=".ui.list.SecondShareActivity" />
         <activity android:name=".ui.list.MyListActivity" />
@@ -27,5 +25,7 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
