--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -57,6 +57,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     // (Java only)
     implementation "androidx.work:work-runtime:2.4.0"
+    implementation project(':library')
+    implementation 'androidx.palette:palette-ktx:1.0.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
+    implementation 'androidx.activity:activity-ktx:1.2.0-beta02'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-beta02'
+
 
 
 
